[workspace]

resolver = "2"
members = [
    "keriox_core",
    "keriox_tests",
    "support/gossip",
    "support/teliox",
    "components/witness",
    "components/watcher",
    "components/controller",
]

[workspace.package]
repository = "https://github.com/THCLab/keriox"
authors = [
    "Human Colossus Foundation <contact@humancolossus.org>",
]
edition = "2021"
license = "EUPL-1.2"

[workspace.metadata.release]

pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
pre-release-commit-message="chore: release {{version}} version"
publish=false
shared-version=false
tag-name="v{{version}}"
