[workspace]

resolver = "2"
members = [
    "keriox_core",
    "keriox_tests",
    "support/gossip",
    "support/teliox",
    "components/witness",
    "components/watcher",
    "components/controller",
    "keriox_sdk",
]

[workspace.package]
repository = "https://github.com/THCLab/keriox"
authors = [
    "Human Colossus Foundation <contact@humancolossus.org>",
]
edition = "2021"
license = "EUPL-1.2"

[workspace.metadata.release]

#pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
#pre-release-commit-message="chore: release {{version}} version"
#publish=false
#shared-version=false
#tag-name="v{{version}}"
tag=false

[patch.crates-io]
# Pin both rmp and rmp-serde to compatible versions from git
# rmp 0.8.11 has the read_data_* functions that rmp-serde 0.15.x needs
rmp = { git = "https://github.com/3Hren/msgpack-rust", tag = "rmp/v0.8.11" }
rmp-serde = { git = "https://github.com/3Hren/msgpack-rust", tag = "rmp-serde/v0.15.4" }
