[workspace]

resolver = "2"
members = [
    "keriox_core",
    "keriox_tests",
    "support/gossip",
    "support/teliox",
    "components/witness",
    "components/watcher",
    "components/controller",
    "keriox_sdk",
    "keri_keyprovider",
]

[workspace.package]
repository = "https://github.com/THCLab/keriox"
authors = [
    "Human Colossus Foundation <contact@humancolossus.org>",
]
edition = "2021"
license = "EUPL-1.2"

[workspace.metadata.release]
pre-release-commit-message = "chore: Release"
tag = false
