[package]
name = "keri-keyprovider"
version = "0.1.0"
description = "Decoupled cryptographic key provider interface for KERI and beyond"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["software"]
software = ["ed25519-dalek", "k256", "rand"]
file-encrypted = ["software", "chacha20poly1305", "argon2", "rpassword"]
os-keychain = ["keyring"]

[dependencies]
async-trait = "0.1"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }

# Software key provider
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
k256 = { version = "0.9", features = ["ecdsa", "sha256", "zeroize"], optional = true }
rand = { version = "0.8", optional = true }

# File-encrypted provider
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
rpassword = { version = "7", optional = true }

# OS keychain provider
keyring = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
