[package]
name = "keri-core"
version = "0.17.13"
description = "Core library for the Key Event Receipt Infrastructure"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["storage-redb"]
storage-redb = ["redb"]
storage-postgres = ["sqlx", "async-std"]
query = ["serde_cbor"]
oobi = ["url", "strum_macros", "strum"]
oobi-manager = ["oobi", "query", "storage-redb", "reqwest", "async-trait", "serde_cbor"]
mailbox = ["query", "storage-redb", "serde_cbor"]

[dependencies]
bytes = "1.3.0"
http = "0.2.8"
said = { version = "0.5.2", features = ["macros"]}
cesrox = { version = "2.0.0-beta.3", features = ["cesr-proof"]}
ed25519-dalek = {version ="2.1.1", features = ["rand_core"]}
k256 = { version = "0.9", features = ["ecdsa", "sha256", "zeroize"] }
blake2 = "0.9.1"
sha2 = "0.9.3"
sha3 = "0.9.1"
rand = { version = "0.8.0" }
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = {version = "0.11.1", optional = true}
serde_derive = "1.0.106"
thiserror = "1.0"
serde-hex = "0.1"
ryu = "1.0"
blake3 = { version = "1", default-features = false }
chrono = { version = "0.4.18", features = ["serde"] }
arrayref = "0.3.6"
zeroize = "1.3.0"
fraction = { version = "0.9", features = ["with-serde-support"] }
redb = { version = "2.3.0", optional = true }

# postgres db deps
sqlx = { version = "0.8", features = ["runtime-async-std", "postgres"], optional = true }
async-std = { version = "1", features = ["attributes"], optional = true }

# oobis dependecies
async-trait = { version = "0.1.57", optional = true }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["rustls-tls"] }
url = { version = "2.2.2", features = ["serde"], optional = true }
strum_macros = { version = "0.24", optional = true }
strum = { version = "0.24", optional = true }
rkyv = "0.8.9"

[dev-dependencies]
sodiumoxide = "0.2.6"
tempfile = { version = "3.1" }
hex = "0.4.3"
criterion = { version = "0.4", features = ["async_std"]}

[package.metadata.release]
publish = false
tag=true
tag-name="v{{version}}"
pre-release-hook = ["git", "cliff", "--tag", "{{version}}", "-r", "../", "--output", "../CHANGELOG.md" ]


[[bench]]
name = "bench"
harness = false
