[package]
name = "keri-sdk"
version = "0.1.5"
description = "KERI Software Development Kit"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keri-core = { path = "../keriox_core", version = "0.17.7", features = ["query", "oobi"] }
cesrox = { version = "0.1.6", features = ["cesr-proof"] }
serde_json = "1"
serde_cbor = { version = "0.11" }
said = { version = "0.4.0", features = ["macros"]}
teliox = { path = "../support/teliox", version = "0.17.7", default-features = false }
log = "0.4"

[dev-dependencies]
tempfile = { version = "3.20" }
ed25519-dalek = {version = "2.1.0", features = ["rand_core"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.2.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[package.metadata.release]
pre-release-hook = ["ls"]
publish = false
