[package]
name = "keri-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.57"
futures = "0.3.24"
keri = { path = "../keriox_core", features = ["oobi", "controller"] }
tempfile = "3.3.0"
url = "2.2.2"
watcher = { path = "../components/watcher" }
witness = { path = "../components/witness" }
controller= { path = "../components/controller" }
async-std = { version = "1.12.0", features = ["attributes"] }
anyhow = "1"