[package]
name = "keri-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.57"
futures = "0.3.24"
keri-core = { path = "../keriox_core", features = ["oobi"] }
tempfile = "3.3.0"
url = "2.2.2"
said = { version = "0.4.0" } 
teliox = {path = "../support/teliox"}
watcher = { path = "../components/watcher" }
witness = { path = "../components/witness" }
keri-controller = { path = "../components/controller", features = ["query_cache"]}
anyhow = "1"
serde_json = "1.0"
test-context = "0.4.1"
actix-rt = "2.10.0"

[package.metadata.release]
pre-release-hook = ["ls"]
publish = false
release = false
