[package]
name = "keri-controller"
version = "0.17.2"
description = "KERI Identifier Management Library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
query_cache = ["rusqlite"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = "0.3.24"
keri-core = { path = "../../keriox_core", version = "0.17.2", features = ["oobi", "mailbox"] }
teliox = {path = "../../support/teliox", version = "0.17.2" }
thiserror = "1.0"
serde_json = "1.0"
url = "2.3.1"
cesrox = { version = "0.1.4" }
itertools = "0.11.0"
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true}
serde = "1.0.219"

[dev-dependencies]
witness = { path = "../witness" }
tempfile = { version = "3.1" }

[package.metadata.release]
pre-release-hook = ["ls"]
publish = false
