[package]
name = "keri-controller"
version = "0.17.13"
description = "KERI Identifier Management Library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["storage-redb"]
storage-redb = ["keri-core/storage-redb", "teliox/storage-redb"]
storage-postgres = ["keri-core/storage-postgres", "teliox/storage-postgres"]
query_cache = ["rusqlite"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = "0.3.24"
keri-core = { path = "../../keriox_core", version = "0.17.13", features = ["oobi-manager", "mailbox"] }
teliox = {path = "../../support/teliox", version = "0.17.13" }
thiserror = "1.0"
serde_json = "1.0"
url = "2.3.1"
cesrox = { version = "0.1.8" }
itertools = "0.11.0"
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true}
serde = "1.0.219"
reqwest = "0.12.22"
async-trait = "0.1.57"

[dev-dependencies]
witness = { path = "../witness" }
tempfile = { version = "3.1" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }

[[test]]
name = "test_kel_managing_postgres"
required-features = ["storage-postgres"]

[[test]]
name = "test_tel_managing_postgres"
required-features = ["storage-postgres"]

[[test]]
name = "test_group_incept_postgres"
required-features = ["storage-postgres"]

[[test]]
name = "test_delegated_incept_postgres"
required-features = ["storage-postgres", "query_cache"]

[package.metadata.release]
publish = false
