[package]
name = "watcher"
version = "0.12.6"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.58"
clap = { version = "4.1.4", features = ["derive"] }
itertools = { version = "0.10.3" }
derive_more = { version = "0.99.17" }
keri-core = { path = "../../keriox_core", features = ["oobi", "mailbox"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2.0"
actix-web = { version = "4" }
figment = { version = "0.10.6", features = ["yaml", "env"] }
url = { version = "2.2.2", features = ["serde"] }
rand = { version = "0.8.5" }
serde_json = "1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.24"
teliox = {path = "../../support/teliox"}
thiserror = "1.0.63"
regex = "1.10.6"

[dev-dependencies]
keri-controller = { path = "../controller" }
witness = { path = "../witness" }
futures = { version = "0.3.13" }
tempfile = { version = "3.1" }

[package.metadata.release]
pre-release-hook = ["ls"]
publish = false
