[package]
name = "witness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56" }
async-trait = "0.1.58"
structopt = { version = "0.3.25" }
actix-web = { version = "4" }
derive_more = { version = "0.99.17" }
figment = { version = "0.10.6", features = ["json"] }
itertools = { version = "0.10.3" }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
keri = { path = "../../keriox_core", features = ["oobi", "mailbox"] }
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0"

[dev-dependencies]
tempfile = { version = "3.1" }
