[package]
name = "witness"
version = "0.17.9"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56" }
async-trait = "0.1.58"
actix-web = { version = "4" }
clap = { version = "4.1.1", features = ["derive"] }
derive_more = { version = "0.99.17" }
figment = { version = "0.10.6", features = ["yaml", "env"] }
itertools = { version = "0.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2.0"
url = { version = "2.2.2", features = ["serde"] }
keri-core = { path = "../../keriox_core", features = ["oobi-manager", "mailbox"] }
log = "0.4.17"
serde_json = "1.0"
teliox = {path = "../../support/teliox"}
thiserror = "1.0.43"

[dev-dependencies]
tempfile = { version = "3.1" }

[package.metadata.release]
pre-release-hook = ["ls"]
publish = false
