[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1" }
futures = { version = "0.3.13" }
bincode = { version = "1.3.1" }
rand = { version = "0.7.3", features = ["std", "getrandom"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
log = "0.4.16"
thiserror = "1.0"