[package]
name = "teliox"
version = "0.17.8"
description = "Library for the Transaction Event Log"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keri-core = {path = "../../keriox_core", version= "0.17.8", features = ["query"]}
said = { version = "0.4.0" }
cesrox = { version = "0.1.4" }
base64 = "0.13.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
serde-hex = "0.1"
chrono = { version = "0.4.18", features = ["serde"] }
arrayref = "0.3.6"
serde_cbor = "0.11.1"
redb = "2.6.0"


[dev-dependencies]
tempfile = "3.1"

[package.metadata.release]
pre-release-hook = ["ls"]
publish = false
